functinoal event handlers

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css"/>
-    <script src="client.js" charset="UTF-8"></script>
     <script src="jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script src="client.js" charset="UTF-8"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>jQuery Review</h1>
+    <h2>Get and Set me!</h2>
+    <input id="nameInput" />
+    <button id="clickableButton">Click me!!</button>
+    <button id="otherButton">Pick me!!!</button>
+    <ul></ul>
 </body>
 </html>
